<resources>
    <string name="app_name">GalwayTour2</string>
    <string name="title_activity_maps">Map</string>
    <string name="hotelTE">Hotels</string>
    <string name="placesTV">Places</string>
    <string name="restoTV">Food</string>
    <string name="musicTV">Live Music</string>
    <string name="title_activity_maps_hotels">Map</string>
    <string name="HouseTV">This property is 14 minutes walk from the beach. In Galway’s historic Latin Quarter, The House is an elegant, 4-star hotel just off Quay Square and the Spanish Arch. It offers air-conditioned rooms, free Wi-Fi, a restaurant and cocktail bar.  Set in an old stone building, The House Hotel has unique art deco interiors and modern facilities. Rooms are all individually decorated and feature soundproofed windows, flat-screen satellite TVs and laptop safes.  The elegant House Bistro has leather and cane seating and serves fresh, modern Irish food. Guests can dine al fresco on the terrace or enjoy a classic cocktail in stylish surroundings at The House Cocktail Bar.  Located in the centre of Galway, The House is a 10-minute walk from Galway Cathedral and the National University of Ireland. Numerous independent boutique shops are located nearby, and Salthill and its promenade are just 15 minutes’ walk away.</string>
    <string name="houseTV">Welcome to The House Hotel, where city luxury and boutique surroundings meet, and where comfort, style and a friendly atmosphere become one. Welcome to the heart of the Latin Quarter, where Galway comes alive. Located just around the corner from the ever bustling Quay Street and Shop Street, The House Hotel is Galway’s unique city centre boutique hotel and home to Galway’s favourite .cocktail bar  Our 4 star hotel in Galway is perfect for anyone visiting the city of the tribes, be it for business, leisure, avail of one of our Galway hotel deals, girls weekend away or a romantic night away to spoil someone special, or to enjoy any of the endless Galway .festivals  Lose hours in our comfy couches in the lobby, and watch the world go by while sipping our famous cocktails.       Experience the most stylish of Galway’s city centre boutique hotels, and enjoy all that Galway has to offer on your doorstep.</string>
    <string name="jurysTV">Whether you’re visiting the city for a weekend away with friends, a family holiday or a business trip, we know how important it is to find a hotel that suits your needs to a tee while you’re here in Galway. At Jurys Inn, our friendly team make sure your stay is nothing short of perfect, starting from the moment you step through the door. From comfortable rooms to contemporary on-site restaurants and free hotel-wide WiFi, we’ve thought of everything here at our Galway hotel.</string>
    <string name="ClaytonTV">Fáilte chuig Óstán an Clayton Gaillimh. Luxury four star hotel located only minutes from Galway city. Its contemporary style coupled with a warm and friendly welcome make this very individual Galway hotel a place you will want to return to time and time again.</string>
    <string name="noxTV">Nox Hotel is an independent hotel, and our top priority is our guests. Guests can enjoy a restful stay in one of our bedrooms, hold meetings or join us in Fork Restaurant for Breakfast, Lunch or Dinner, Our team will strive to provide a friendly, personal service, warm hospitality and excellent food.Nox Hotel Location is withing easy reach of Galway City Centre Nox Hotel is located on the Headford Road as you enter Galway City Centre. The hotel offers you extensive free parking, free WiFi and a regular bus route close by the hotel and we offer a taxi free phone or alternatively Eyre Square is a 20 minute walk. Due to our prime location, NoxHotel is your perfect accommodation choice when visiting Galway, for business and pleasure. Within close proximity to the city centre, tourist attractions, hospitals and Galway\'s largest corporate business parks and industrial estates.</string>
    <string name="jurysTitleTV">Jury\'s Hotel Inn</string>
    <string name="claytonTitleTV">Clayton Hotel</string>
    <string name="noxTitleTV">Nox Hotel</string>
    <string name="houseTitleTV">The House Hotel</string>
    <string name="nicholasTitleTV">St. Nicholas\' Church</string>
    <string name="nicholasTV">Galway is a lovely port city brimming with history, and this church is in the heart of the city. It is easy to find, free and beautiful. It is rumored that Columbus prayed here before sailing to North America. A beautiful place to see amidst the rest of Galway.</string>
    <string name="abbeyTV">Kylemore Abbey</string>
    <string name="vicoloTV"><![CDATA[Il Serving minestrone, bruschetta by day & Italian cheese, charcutterie and a nightly changing menu offering seasonal pastas, risotto & rustic delights. Also stocking Prosecco, Aperol & Campari and 50 Italian wines!  With only 24 seats and 20 wines by the glass, it defied logic.]]></string>
    <string name="kirwanTV">Kirwan’s Lane opened its doors in 1996 and is one of the oldest restaurants in Galway. We have a fine tradition of quality food and service. Galway is famous for its oysters and at Kirwan’s Lane, these delicacies are always available. Enjoy them natural or grilled with bearnaise sauce and parmesan. Our second floor has a completely new look and is ideal for private functions such as small weddings or corporate occasions. We can accommodate up to 50 people and customise a set menu to suit.</string>
    <string name="oscarTV">Oscar’s Seafood Bistro is located in the historic West-side of Galway City which is also known as the cultural quarter by the local population.  Situated on Dominick street with the best of Galways pubs for both live music and a quiet pint as neighbors, Oscars is a perfect bistro to enjoy a selection of real local foods in particular the Seafood freshly caught off the coast of Galway and sourced from local fishermen and the best of Galways fishmongers.</string>
    <string name="cavaTV">Drigin designed a contemporary space with a strong focus on exposed and reclaimed materials to match the colourful and lively atmosphere of Cava. Proven to be as popular as ever with the locals, tourists and food critics are also singing its praise.</string>
    <string name="title_activity_resto2">Map</string>
    <string name="roisinTV"><![CDATA[Róisín Dubh is undoubtedly one of the best music and comedy venues in the country, bringing established talent to the city, while also providing a stage for emerging artists. With a great atmosphere, wonderful staff, and a real commitment and passion to music and comedy, it\'s one of the best places to see the best national and international acts around.  Róisín Dubh has long been the home of comedy in Galway. Many great acts including Stewart Lee, Phill Jupitus & Rich Hall, list it as being one of their top 10 venues in the world.]]></string>
    <string name="roisinTittleTV">Róisín Dubh</string>
    <string name="title_activity_maps_music">Map</string>
    <string name="TigTiitleTV">Tig Choili</string>
    <string name="tigTV">Tig Choili is located in the heart of Galway citys Latin Quarter.A country pub in the middle of the city,we boast some of the finest Traditional Irish Music Galway has to offer! With a good blend of locals and visitors alike,this lively pub promises to give you an experience, as well as the finest pint in the city! This pub is a hub for local and visiting musicians with 14 sessions weekly,ALL YEAR ROUND!!  The walls of the pub are decorated with pictures of local and famous musicians who have played a tune or two in Tig Choilis over the years.  This family run pub guarantees you a warm welcome,a great pint and some lively Traditional music to make your visit to Tig Choilis a special one!</string>
    <string name="quaysTittleTV">The Quays</string>
    <string name="quaysTV">The Quays, Galway   Located in the city centre of Galway’s vibrant ‘Latin Quarter’ The Quays is one of Galway’s most famous and historic drinking establishments. For close on 400 years The Quays has catered to both Galwegians and visitors to our city. Our restaurant offers a carvery lunch and night-time a la carte dinner.</string>
    <string name="TaaffesTittleTV">Taaffes Bar</string>
    <string name="taaffesTV">aaffes is one of Galway City’s best known bars. Located right in the Heart of the City on Shop Street, Taaffes has been operating as a pub for over 150 years. The building itself has been here for much longer dating back at least 400 years. Architectural evidence on its upper floors and rear smoking area make it as old as the nearby Kings Head.  It is best known for its Traditional Irish music and there are sessions here at 5pm and 9.30pm from April-October and at 9pm the rest of the year. There is plenty of seating along the walls but its busy here seven nights a week so get in early if you want to sit. The atmosphere in Taaffes is great with a good mix of locals from around the County and also plenty of tourists squeezing in. There is never any cover charge and some of Irelands best traditional musicians including Sharon Shannon has played here.</string>
    <string name="title_activity_all_maps">Map</string>
    <string name="TittleTV">Galway Tour</string>

</resources>
